flpsed ChangeLog
=================

flpsed-0.5.0
 - fix scroll drawing problem.
 - fix PostScript DSC problem (reported by Jim Cline).
 - ask before overwriting files.
 - fix problem with non-A4 paper sizes.
 - add a manual page.

flpsed-0.3.9
 - fix problem with documents that embed standard font replacements
   (reported by Volker Kuhlmann)
 - use plain Helvetica font instead of HelveticaNeue-Roman
   (reported by Evgeny Stambulchik and others).
 - use ftell() instead of ftello() for better compatibility
   (reported by Christophe CURIS).
 - automatically import PDF files from the command line (requested by many).

flpsed-0.3.8
 - implicitely end setup section if %%Page comment is encountered and check
   for valid setup length after DSC parsing.
 - only set modified flag if real changes have been made to the document.
 - use fl_choice() instead of deprecated fl_ask().
 - no longer rely on %%Pages comment because of possible use of (atend).
 - call XSync() to avoid "Cannot get ghostview property" error from gs
   (reported by A Mennucc).
 - don't die on SIGPIPE if gs has a problem (reported by A Mennucc).

flpsed-0.3.7
 - use setenv() instead of putenv() for POSIX 
   compatibility (noticed by Jeff Orczykowski on Solaris 8).
 - fix gcc-4.1 compilation problem.
 - fix segfault in DSC code reported by Morten Brix Pedersen.
 - fix scroll bar redraw problem after zoom.

flpsed-0.3.6
 - Add support for PostScript Document Structure Convention.
 - Pages can now be accessed in random order.
 - Document sizes other than A4 are handled better.
 - Add -geometry and -z (zoom) options.

flpsed-0.3.5
 - Add text color support. Click on the (initially) black button and 
   increase the brightness using the vertical slider.
 - Move text properties (currently text size and color) to own toolbar.
 - Fix keyboard shortcuts (noticed by Spec).
 - Updated Mac OS X compile instructions 
   (based on feedback from Jonathan Dueck).

flpsed-0.3.4